# venmo-autopay

./: LICENSE  README.md  empty.env  example.env  get_access_token.py  get_payment_methods.py  get_user_id.py  main.py  pyproject.toml  requirements.txt  smtp_client.py  venmo.py
.github/workflows/: actions.yml
clients/: venmo.py
enums/: TransactionType.py
models/: payment.py  request.py
